--- a/main.html
+++ b/main.html
@@ -108,6 +108,12 @@
                             <li><a href="#/facilityInspect"><i class="fa fa-fw "></i>设施检查</a></li>
                         </ul>
                     </li>
+                    <li class="userArchives"> <a href="javascript:void(0)" data-toggle="collapse" data-target="#archives"><i class="fa fa-fw fa-address-card-o"></i> 用户档案<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="archives" class="collapse">
+                            <li><a href="#/userList"><i class="fa fa-fw "></i>用户台账</a> </li>
+                            <li><a href="#/userArea"><i class="fa fa-fw "></i>片区管理</a></li>
+                        </ul>
+                    </li>
                     <!--<li>
                         <a href="#/equipment"><i class="fa fa-fw fa-wrench"></i> 设备管理</a>
                     </li>-->
