--- a/src/html/certificationEnterprised.html
+++ b/src/html/certificationEnterprised.html
@@ -112,7 +112,19 @@
                     <span class="addidentifyImg">添加图片</span>
                 </div>
             </div>
-            <div class="prompt">支持jpg/gif/png格式，图片小于10M，最多上传3张图片，支持批量上传（文件名称不可超过50字）。</div>
+            <div class="prompt">支持jpg/gif/png格式，图片小于10M，最多上传2张图片，支持批量上传（文件名称不可超过50字）。</div>
+            <div class="businessLicense">企业人员花名册</div>
+            <div class="content">
+                <div class="rose_img_list ">
+                </div>
+                <div class="rose_img_file">
+                    <input type="file" onchange="handleFiles(this,3);" class="upload_rose_picture" name="file" multiple="multiple" />
+                </div>
+                <div class="rose_img_add">
+                    <span class="addroseImg">添加图片</span>
+                </div>
+            </div>
+            <div class="prompt">支持jpg/gif/png格式，图片小于10M，最多上传9张图片，支持批量上传（文件名称不可超过50字）。</div>
             <div class="row">
                 <div class="col-xs-2 col-md-2"></div>
                 <div class="col-xs-8 col-md-8" style="vertical-align: center;text-align: center">
