--- a/src/html/facilityInspect.html
+++ b/src/html/facilityInspect.html
@@ -64,8 +64,8 @@
                                     <div class="item_box">
                                         <div class="item1" data-class="isLeakage">
                                             <span class="item" data-value="">全部</span>
-                                            <span class="item" data-value="0">漏气</span>
-                                            <span class="item" data-value="1">未漏气</span>
+                                            <span class="item" data-value="1">漏气</span>
+                                            <span class="item" data-value="0">未漏气</span>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                 <div class="modal-header">
                     <h3>设施检查记录详情<a class="close" data-dismiss="modal">×</a></h3>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id='historyDetailsFrameT'>
                     <div class="planDetails">
                         <div class="planDetailsMain">
                             <div class="planList">
