--- a/src/html/help.html
+++ b/src/html/help.html
@@ -45,7 +45,7 @@
                     <div class="col-md-2">&nbsp;</div>
                 </div>
                 <div class="suspensionFrame">
-                    <div class="title">免费咨询</div>
+                    <div class="title"><span>免费咨询</span><span id="close">X</span></div>
                     <div class="zixun"><img src="/src/images/help/consultation.png" alt=""></div>
                     <div class="content">
                         <p><img src="/src/images/help/tell.png" alt=""><span>010-62666705（工作日）</span></p>
