--- a/src/html/loginSet.html
+++ b/src/html/loginSet.html
@@ -45,7 +45,7 @@
                     <div class="one allEnterprised" style="text-align:left;width:50%;height:170px;overflow: auto;margin:0px auto;">
 
                     </div>
-                    <div style="background:#F3F3F3;height:90px;width:760px;border-radius:0 0 5px 5px;position:absolute;top:560px;">
+                    <div class="creatEnterprise">
                         <div class="creat fl ml150 setDefaultAndLogin" style="clear:both"><input type="button" name="" value="确定"></div>
                         <div class="creat fl createNewEnterprised" style="margin-left:80px"><input class="create_company" type="button" name="" value="企业创建"></div>
                         <div class="quit fr mr150 quitToLogin"><input type="button" name="" value="退出"></div>
