--- a/src/html/personal.html
+++ b/src/html/personal.html
@@ -107,13 +107,17 @@
                 <div class="col-md-8">
                     <div class="panel panel-default  user-contact">
                         <div class="panel-heading ">
-                            通讯设备
+                            通讯信息
                         </div>
                         <div class="panel-body">
                             <form>
                                 <div class="row">
                                     <div class="col-md-4 text-right userdes">手机号：</div>
-                                    <div class="col-md-5 userdes" id="tel">
+                                    <div class="col-md-5 userdes">
+                                        <p>
+                                            <span id="tel"></span>
+                                            <a href="/src/html/phoneModify.html"><span class="modifyPhoneBtn">修改手机号码</span></a>
+                                        </p>
                                         <!--<input type="text" class="form-control" id="tel" placeholder="请输入手机号">-->
                                     </div>
                                     <div class="col-md-3 "></div>
